[tool.poetry]
name = "bookbot"
version = "0.1.0"
description = "Boot.dev first project"
authors = ["daniel.vazquez-silva <daniel.vazquez-silva@darkwolfsolutions.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
